[gd_scene load_steps=51 format=3 uid="uid://dbeo4tp0jv8gk"]

[ext_resource type="Texture2D" uid="uid://v5pyu0jps4qf" path="res://Assets/Environment/BackgroundSky.png" id="1_b0ikd"]
[ext_resource type="Script" path="res://Scenes/background_forest.gd" id="1_noxjd"]
[ext_resource type="Shader" path="res://Assets/Shaders/water.gdshader" id="2_o38cd"]
[ext_resource type="Shader" path="res://Assets/Shaders/Blending_Modes/soft_light.gdshader" id="3_1r3pf"]
[ext_resource type="Texture2D" uid="uid://i6i0vkoa086c" path="res://Assets/Environment/BackgroundForest.png" id="3_bcwka"]
[ext_resource type="Texture2D" uid="uid://cqo0ojuubal85" path="res://Assets/Environment/Backgroundgrass.png" id="4_8ak37"]
[ext_resource type="Texture2D" uid="uid://bwo6p8ttiatv7" path="res://Assets/Environment/WaterReflections.png" id="4_8gpir"]
[ext_resource type="PackedScene" uid="uid://ctlkjntcstche" path="res://Game/Characters/Fairy/fairy_river.tscn" id="6_lb5lr"]
[ext_resource type="PackedScene" uid="uid://ctat1o7jjpnk1" path="res://Scenes/wind.tscn" id="8_00l0s"]
[ext_resource type="PackedScene" path="res://Game/Characters/Fairy/fairy_pine.tscn" id="8_n2v6l"]

[sub_resource type="Gradient" id="Gradient_e4jpv"]
offsets = PackedFloat32Array(0.00819672, 0.696721, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.696721, 0.696721, 0.696721, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_52l8l"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0axqn"]
color_ramp = SubResource("Gradient_e4jpv")
noise = SubResource("FastNoiseLite_52l8l")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_1d0a3"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_njoc3"]
width = 2872
height = 597
noise = SubResource("FastNoiseLite_1d0a3")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_i63yp"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_oe0qy"]
noise = SubResource("FastNoiseLite_i63yp")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uuy7s"]
shader = ExtResource("2_o38cd")
shader_parameter/front_colour = Color(0, 0.383333, 0.46, 1)
shader_parameter/middle_colour = Color(0, 0.54, 0.441, 1)
shader_parameter/back_colour = Color(0.051, 0.0543, 0.15, 1)
shader_parameter/highlight_colour = null
shader_parameter/layer_distort = 0.5
shader_parameter/sin_scale = 1
shader_parameter/highlights_threshold = 0.884
shader_parameter/reflection_strength = 0.227
shader_parameter/refraction_strength = 0.0
shader_parameter/sun_refraction_scale = 0.161
shader_parameter/sun_refraction_mag_min = 0.555
shader_parameter/sun_refraction_mag_max = 0.76
shader_parameter/refraction_colour_split = 0.277
shader_parameter/height = 0.36
shader_parameter/saturation = 1.472
shader_parameter/waves = SubResource("NoiseTexture2D_oe0qy")
shader_parameter/highlights_0 = SubResource("NoiseTexture2D_0axqn")
shader_parameter/highlights_1 = SubResource("NoiseTexture2D_njoc3")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3yekm"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_j0vqp"]
noise = SubResource("FastNoiseLite_3yekm")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tfnn1"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_h8pdk"]
width = 1002
height = 1757
noise = SubResource("FastNoiseLite_tfnn1")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mc24w"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nh0vm"]
noise = SubResource("FastNoiseLite_mc24w")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_75pvt"]
shader = ExtResource("2_o38cd")
shader_parameter/front_colour = Color(0.054, 0.18, 0.1611, 1)
shader_parameter/middle_colour = Color(0, 0.319, 0.33, 1)
shader_parameter/back_colour = Color(0.0013, 0.13, 0.106405, 1)
shader_parameter/highlight_colour = null
shader_parameter/layer_distort = 0.5
shader_parameter/sin_scale = 1
shader_parameter/highlights_threshold = 0.85
shader_parameter/reflection_strength = 0.25
shader_parameter/refraction_strength = 0.0
shader_parameter/sun_refraction_scale = 0.195
shader_parameter/sun_refraction_mag_min = 0.8
shader_parameter/sun_refraction_mag_max = 0.9
shader_parameter/refraction_colour_split = 0.03
shader_parameter/height = 0.36
shader_parameter/saturation = 1.0
shader_parameter/waves = SubResource("NoiseTexture2D_nh0vm")
shader_parameter/highlights_0 = SubResource("NoiseTexture2D_j0vqp")
shader_parameter/highlights_1 = SubResource("NoiseTexture2D_h8pdk")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_15kvc"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tuo8v"]
noise = SubResource("FastNoiseLite_15kvc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lvg18"]
shader = ExtResource("3_1r3pf")
shader_parameter/intensity = 0.076
shader_parameter/dissolve_value = 1.0
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_tuo8v")

[sub_resource type="Curve2D" id="Curve2D_112fr"]
_data = {
"points": PackedVector2Array(-62.8701, -300.52, 62.8701, 300.52, 179, -227, 0, 0, 0, 0, 365, 81, 0, 0, 0, 0, 1074, 78, 0.356945, 257.45, -0.356945, -257.45, 1351, -177)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_cisvr"]
_data = {
"points": PackedVector2Array(139.972, 366.69, -139.972, -366.69, 1352, 841, 191.178, -83.9052, -191.178, 83.9052, 880, 368, 116.067, 172.305, -116.067, -172.305, 347, 229, 0, 0, 0, 0, 137, -398)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_yganw"]
_data = {
"points": PackedVector2Array(-782.839, -215.203, 782.839, 215.203, -259, 450, -332.881, -218.979, 332.881, 218.979, 1508, 258)
}
point_count = 2

[sub_resource type="Gradient" id="Gradient_molrh"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uaqro"]
gradient = SubResource("Gradient_molrh")

[sub_resource type="Gradient" id="Gradient_8iigw"]
offsets = PackedFloat32Array(0, 0.508197, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_12p6u"]
gradient = SubResource("Gradient_8iigw")

[sub_resource type="Curve" id="Curve_pru1e"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, -10.989), 0.0, 0.0, 0, 0, Vector2(0.16, 46.1538), 0.0, 0.0, 0, 0, Vector2(0.313333, -15.3846), 0.0, 0.0, 0, 0, Vector2(0.433333, 32.967), 0.0, 0.0, 0, 0, Vector2(0.606667, -19.7802), 0.0, 0.0, 0, 0, Vector2(0.773333, 28.5714), 0.0, 0.0, 0, 0, Vector2(0.886667, -28.5714), 0.0, 0.0, 0, 0, Vector2(1, 37.3626), 0.0, 0.0, 0, 0]
point_count = 8

[sub_resource type="CurveTexture" id="CurveTexture_dha20"]
curve = SubResource("Curve_pru1e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2ihxk"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(640, 360, 1)
direction = Vector3(-1, 0, 0)
spread = 20.0
initial_velocity_min = 20.0
initial_velocity_max = 80.0
gravity = Vector3(-200, 20, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 6.0
tangential_accel_curve = SubResource("CurveTexture_dha20")
damping_max = 100.0
scale_min = 1.5
scale_max = 1.8
color_ramp = SubResource("GradientTexture1D_12p6u")
color_initial_ramp = SubResource("GradientTexture1D_uaqro")

[sub_resource type="Gradient" id="Gradient_eoj1g"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0.012987, 0.506494, 1)
colors = PackedColorArray(1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b511q"]
resource_local_to_scene = true
gradient = SubResource("Gradient_eoj1g")
width = 2
height = 32
fill_to = Vector2(0, 1)

[sub_resource type="Environment" id="Environment_55avn"]
background_mode = 3
glow_enabled = true
glow_normalized = true
glow_intensity = 0.5
glow_strength = 1.1
glow_bloom = 0.01
glow_blend_mode = 1
adjustment_enabled = true
adjustment_brightness = 1.1

[sub_resource type="Animation" id="Animation_rdo7x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gb7fc"]
resource_name = "fairy1"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3njr8"]
_data = {
"RESET": SubResource("Animation_rdo7x"),
"fairy1": SubResource("Animation_gb7fc")
}

[sub_resource type="Animation" id="Animation_lvspf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Path2D2/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_a02ey"]
resource_name = "fairy"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Path2D2/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8yq2"]
_data = {
"RESET": SubResource("Animation_lvspf"),
"fairy": SubResource("Animation_a02ey")
}

[sub_resource type="Animation" id="Animation_c1gs7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D3/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vcls6"]
resource_name = "fairy3"
length = 15.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D3/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 13.5, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.253, 0.747, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4wfh"]
_data = {
"RESET": SubResource("Animation_c1gs7"),
"fairy3": SubResource("Animation_vcls6")
}

[node name="BackgroundForest" type="Node2D"]
texture_filter = 3
script = ExtResource("1_noxjd")

[node name="BackgroundSky" type="Sprite2D" parent="."]
position = Vector2(640, 223)
scale = Vector2(2, 2)
texture = ExtResource("1_b0ikd")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_uuy7s")
offset_top = 631.0
offset_right = 1281.0
offset_bottom = 719.0

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_75pvt")
offset_left = 75.0
offset_top = -31.0
offset_right = 1251.0
offset_bottom = 497.0
color = Color(0.402, 0.31, 1, 1)

[node name="WaterReflections" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lvg18")
position = Vector2(640, 360)
scale = Vector2(2, 2)
texture = ExtResource("4_8gpir")

[node name="BackgroundForest" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(2, 2)
texture = ExtResource("3_bcwka")

[node name="Path2D3" type="Path2D" parent="."]
curve = SubResource("Curve2D_112fr")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D3"]
position = Vector2(179, -227)
rotates = false

[node name="Node2D" type="Node2D" parent="Path2D3/PathFollow2D"]
position = Vector2(-92, 116)
scale = Vector2(0.5, 0.5)

[node name="Fairy_River" parent="Path2D3/PathFollow2D/Node2D" instance=ExtResource("6_lb5lr")]
rotation = 0.20944
scale = Vector2(-1, 1)

[node name="Fairy_Pine" parent="Path2D3/PathFollow2D/Node2D" instance=ExtResource("8_n2v6l")]
position = Vector2(122, -14)
rotation = 0.174533
scale = Vector2(-1, 1)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-70, 55)
curve = SubResource("Curve2D_cisvr")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1352, 841)
rotates = false

[node name="Node2D" type="Node2D" parent="Path2D/PathFollow2D"]
scale = Vector2(0.8, 0.8)

[node name="Fairy_River" parent="Path2D/PathFollow2D/Node2D" instance=ExtResource("6_lb5lr")]
position = Vector2(-94, -43)

[node name="Fairy_River2" parent="Path2D/PathFollow2D/Node2D" instance=ExtResource("6_lb5lr")]
position = Vector2(102, -37)

[node name="Fairy_River3" parent="Path2D/PathFollow2D/Node2D" instance=ExtResource("6_lb5lr")]
scale = Vector2(0.7, 0.7)

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_yganw")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2(-259, 450)
rotates = false

[node name="Node2D" type="Node2D" parent="Path2D2/PathFollow2D"]

[node name="Fairy_Pine" parent="Path2D2/PathFollow2D/Node2D" instance=ExtResource("8_n2v6l")]
scale = Vector2(-1, 1)

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(1280, 0)
autoscroll = Vector2(-50, 0)

[node name="Backgroundgrass" type="Sprite2D" parent="Parallax2D"]
position = Vector2(640, 360)
scale = Vector2(2, 2)
texture = ExtResource("4_8ak37")

[node name="Wind" parent="." instance=ExtResource("8_00l0s")]

[node name="GPUParticles2D" parent="Wind" index="0"]
process_material = SubResource("ParticleProcessMaterial_2ihxk")
texture = SubResource("GradientTexture2D_b511q")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_55avn")

[node name="fairy1" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3njr8")
}

[node name="Fairy1" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="fairy2" type="AnimationPlayer" parent="."]
root_node = NodePath("../Fairy2")
libraries = {
"": SubResource("AnimationLibrary_b8yq2")
}

[node name="Fairy2" type="Timer" parent="."]
wait_time = 40.0
autostart = true

[node name="fairy3" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w4wfh")
}

[node name="Fairy3" type="Timer" parent="."]
wait_time = 70.0
autostart = true

[connection signal="animation_finished" from="fairy1" to="." method="_on_fairy_1_animation_finished"]
[connection signal="timeout" from="Fairy1" to="." method="_on_fairy_1_timeout"]
[connection signal="animation_finished" from="fairy2" to="." method="_on_fairy_2_animation_finished"]
[connection signal="timeout" from="Fairy2" to="." method="_on_fairy_2_timeout"]
[connection signal="animation_finished" from="fairy3" to="." method="_on_fairy_3_animation_finished"]
[connection signal="timeout" from="Fairy3" to="." method="_on_fairy_3_timeout"]

[editable path="Wind"]
